12940
The code below
```scala
class C {
  class A
  def a = () => ()
  def a = (p:A) => ()
  a[A]
}
```
produces the following error
```scala
test.scala:5: error: overloaded method value a with alternatives => (C.this.A) => Unit <and> => () => Unit does not take type parameters
  this.a[A]
       ^
Exception in thread "main" java.lang.AssertionError: assertion failed
    at scala.Predef$$.assert(Predef.scala:91)
    at scala.tools.nsc.typechecker.Typers$$Typer.typedTypeApply$$1(Typers.scala:2335)
    at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3030)
    at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3139)
    at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3173
    [..]
```
